-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 271103) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??112003 (v2.3.2)  -** stable release **-
	- added: support for libsndfile; enabled if libsndfile is
	         detected succesfully by configure; can be disabled
		 with --disable-sndfile
	- added: added new audio input/output types 'audiofile', 
		 'sndfile' and 'mikmod'; see ecasound(1) for more
		 details
	- added: pyecasound/test2_stresstest.py new test case 
	- added: initial Ruby ECI impl added; see rubyecasound/README 
		 for details [janweil]
	- changed: increased default buffer sizes for 'rtnull' objects 
		   to avoid too many xrun warnings; warnings are also
		   no longer printed to stderr - instead a summary 
		   is printed at the end of the session if any xruns
		   have occured
	- fixed: pyecasound/test1_stresstest.py was not included in
		 the dist package
	- fixed: libaudiofile - input file audio parameters
		 parsed incorrectly
	- fixed: -x option - truncate outputs - was not working 
	- fixed: preset.h and other related headers were not installed
		 during install-data phase
	- fixed: pyecasound - the critical native python bugs found 
		 in earlier releases are now fixed
	- fixed: ecasoundc - serious memory leak in handling string 
		 list return types
	- fixed: typo in libecasoundc-config usage [koraq]
19112003 (v2.3.1)  -** stable release **-
	- added: --disable-effects configure option; build ecasound 