@@ -27,6 +27,7 @@ Note! See README for a list of defined developer tags (kaiv -> me).
 -----------------------------------------------------------------------
 [ History (newest first) ]
 
+28.11.2003 - edi-33 closed
 20.08.2003 - edi-4, edi-19 and edi-35 frozen, edi-38 added and frozen
 	     immediately, edi-39 added
 17.03.2003 - edi-36 and edi-37 added
@@ -83,8 +84,6 @@ Note! See README for a list of defined developer tags (kaiv -> me).
          - submitted: kaiv, 23.10.2002
 (edi-32): FLAC support.
 	 - submitted: nolan_d, 17.10.2002
-(edi-33): Libsndfile support.
-	 - submitted: kaiv, 29.10.2002
 (edi-34): Better checks for parsing operator arguments.
 	 - submitted: jhalttun, 28.10.2002
 (edi-36): Addition of position markers.
@@ -166,14 +165,20 @@ Note! See README for a list of defined developer tags (kaiv -> me).
 	 - implemented: kaiv, 22.08.2002, 2.1dev12
 (edi-27): NetECI - network interface for controlling ecasound operation.
          - submitted: kaiv, 28.06.2002
+	 - done: kaiv, 31.10.2002
 (edi-28): Extending the EIAM command set to allow writing standalone ECI 
 	  implementations.
          - submitted: kaiv, 29.09.2002
+	 - done: kaiv, 29.10.2002
 (edi-29): Ecamonitor - ecasound monitor client implemented using NetECI.
          - submitted: kaiv, 29.09.2002
+	 - closed: kaiv, 07.11.2002
 (edi-30): Turning libecasound and libkvutils into static libraries.
          - submitted: kaiv, 08.10.2002
 	 - initial implementation: kaiv, 16.10.2002
 	 - done: kaiv, 29.10.2002
+(edi-33): Libsndfile support.
+	 - submitted: kaiv, 29.10.2002
+	 - closed: kaiv, 28.11.2003
 
 -----------------------------------------------------------------------
