@@ -1,6 +1,6 @@
 dnl ---
 dnl configure.in for ecasound
-dnl last modified: 20031127-30
+dnl last modified: 20031127-31
 dnl 
 dnl Many of the tests and macros in this file have been borrowed from 
 dnl other GPL-lisenced packages (Alsaplayer, ALSA, SIP, PyQt, 
@@ -168,6 +168,7 @@ AC_ARG_ENABLE(debug,
 AM_CONDITIONAL(ECA_AM_DEBUG_MODE, test x$include_debug = xyes)
 if test x$include_debug = xyes; then
     EXTRADEBUGFLAGS="-Wall -Wstrict-prototypes -fno-unroll-loops -O"
+    AC_DEFINE(ECA_DEBUG_MODE)
 else
     EXTRADEBUGFLAGS="-DNDEBUG"
 fi                                     
