@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------
-** Ecasound - User-visible changes (NEWS)      (last edited: 271103) **
+** Ecasound - User-visible changes (NEWS)      (last edited: 281103) **
 -----------------------------------------------------------------------
 
 About the version numbers... "vX.Y[.Z][-extraT]" :
@@ -14,6 +14,7 @@ About the version numbers... "vX.Y[.Z][-extraT]" :
 -----------------------------------------------------------------------
 
 ??112003 (v2.3.2)  -** stable release **-
+	- edi-entries: edi-33 closed
 	- added: support for libsndfile; enabled if libsndfile is
 	         detected succesfully by configure; can be disabled
 		 with --disable-sndfile
@@ -23,6 +24,9 @@ About the version numbers... "vX.Y[.Z][-extraT]" :
 	- added: pyecasound/test2_stresstest.py new test case 
 	- added: initial Ruby ECI impl added; see rubyecasound/README 
 		 for details [janweil]
+	- added: --enable-rubyecasound configure option; defaults to
+		 yes if ruby interpreter found on the system
+	- added: resampling examples to Documentation/examples.html
 	- changed: increased default buffer sizes for 'rtnull' objects 
 		   to avoid too many xrun warnings; warnings are also
 		   no longer printed to stderr - instead a summary 
@@ -40,6 +44,8 @@ About the version numbers... "vX.Y[.Z][-extraT]" :
 	- fixed: ecasoundc - serious memory leak in handling string 
 		 list return types
 	- fixed: typo in libecasoundc-config usage [koraq]
+	- fixed: bugs with resample that caused audible artifacts
+		 with certain srcrate-dstrate combinations
 19112003 (v2.3.1)  -** stable release **-
 	- added: --disable-effects configure option; build ecasound 
 		 without effect and controller components
